# SE-thursday

APIs-demo/: Dockerfile  README.md  app.py  auth.py  auth_endpoints.py  config.py  db.py  inventory_management_endpoints.py  main.py  models.py  pyproject.toml  requirements.txt  schema.py
APIs-demo/my_venv/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack
