[tool.poetry]
name = "apis-demo"
version = "0.1.0"
description = "for SE_THURSDAY tutorials"
authors = ["Bradleykibs <Bradleykibwana@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
psycopg2 = "^2.9.9"
SQLAlchemy = "^2.0.29"
uvicorn = "^0.29.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
jwt = "^1.3.1"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
